
Imager 0.81 - unreleased
===========

 - added coverage tests for masked images (maskimg.c @100% test coverage)

 - add hsv() method to Imager::Color
   Thanks to Leolo (Philip Gwyn)
   https://rt.cpan.org/Ticket/Display.html?id=65385

 - split libt1 Type 1 font support into a sub-module
   https://rt.cpan.org/Ticket/Display.html?id=49616 (partial)

Bug fixes:

 - paletted writes to a masked image are now masked correctly.
   Revealed by new coverage tests.

 - update the filter plugin documentation.
   https://rt.cpan.org/Ticket/Display.html?id=56513

 - add the matrix() method to Imager::Matrix2d to allow creation of a
   matrix with specified co-efficients.  You can now multiple an
   Imager::Matrix2d object by a 9 element array ref or a number.
   https://rt.cpan.org/Ticket/Display.html?id=29938

 - really fix loading TTF fonts with FT2 when FT1 isn't available.
   Thanks to Leolo (Philip Gwyn)
   https://rt.cpan.org/Ticket/Display.html?id=65386
   https://rt.cpan.org/Ticket/Display.html?id=62855

 - make sure each test script that needs testout/ creates it.
   https://rt.cpan.org/Ticket/Display.html?id=65088

 - handle a slightly different warning from libtiff 4.x
   https://rt.cpan.org/Ticket/Display.html?id=65268

Imager 0.80 - 17 Jan 2011
===========

 - added coverage tests for Imager::Fountain and Imager::Color::Float

 - Imager is now maintained in git
   http://git.imager.perl.org/imager.git
   git://git.imager.perl.org/imager.git

Bug fixes:

 - images with an translucent alpha channel were not scaled correctly
   by the default (qtype=normal) scaling method.
   https://rt.cpan.org/Public/Bug/Display.html?id=63922

 - Imager::Color::Float now translates "#FFFFFF" to white instead of
   just a little darker.

 - make the default color map build algorithm "mediancut".  This
   changes the default color map builder for writing GIFs back to what
   it was in 0.77, reverting a performance regression.
   https://rt.cpan.org/Ticket/Display.html?id=64785
