@@ -9,45 +9,48 @@ my $manifest = maniread();
 my @pod = sort grep !/^inc/ && /\.(pm|pl|pod|PL)$/, keys %$manifest;
 plan tests => scalar(@pod);
 my @stopwords = qw/
+API
+Arnar
+BMP
+Blit
+CGI
+CMYK
+CPAN
+FreeType
+GIF
+HSV
+Hrafnkelsson
+ICO
+IMAGER
 Imager
 Imager's
-IMAGER
-GIF
 JPEG
 PNG
-TIFF
-BMP
+PNM
+RGB
+RGBA
 SGI
 TGA
-RGB
-ICO
-PNM
-bilevel
-dpi
-Arnar
-Hrafnkelsson
-API
-paletted
-guassian
-metadata
-CPAN
-eg
-ie
-CMYK
-HSV
-CGI
-const
-varargs
-FreeType
+TIFF
 UTF-8
-RGBA
-postfix
-infix
-unary
-renderer
 Uncategorized
-Blit
+bilevel
+const
+dpi
+eg
+guassian
+ie
+infix
+metadata
+paletted
+postfix
+preload
+preloading
+preloads
+renderer
 tuple
+unary
+varargs
 /;
 
 local %Pod::Wordlist::Wordlist = %Pod::Wordlist::Wordlist;
